[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncio_subprocess_examples"
description = "Examples of using asyncio-subprocess."
keywords = ["asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]
requires-python = ">=3.10"
dynamic = ["readme", "version"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "asyncio_subprocess_examples.__version__"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true
