[metadata]
name = asyncio_subprocess_examples
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/scivision/asyncio-subprocess-examples
description = Examples of using asyncio-subprocess
keywords =
  asyncio
  concurrent
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
scripts =
  compiler_checks.py
  test_fortran.py
  PoolExceptions.py
  date_coro.py
install_requires =


[options.extras_require]
tests =
  pytest
  pytest-asyncio
  pytest-timeout
  flake8
  mypy
